Fix test
RISDEV-10624